@@ -39,6 +39,9 @@ exclude_filename = MANIFEST.SKIP
 remove = strict
 remove = warnings
 
+[Prereqs]
+version = 0.77 ; Perl v5.8
+
 [Prereqs / TestRequires]
 Moo = 1.006000
 
